# InformationTheoryProject

./: decoder.py  detect.py  download_model.py  encoder.py  end_to_end_pipeline.py  main.py  pipeline.py  pyproject.toml  readme.md  receiver.py  semantic_description.py  semantic_labeler.py  test  test_receiver.py  test_receiver_full.py  visualizer.py
output/: result_description.txt  result_semantic.json
temp/: res_description.txt  res_semantic.json
