[project]
name = "informationtheoryproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "construct>=2.10.70",
    "diffusers>=0.28.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "torch>=2.1.0",
    "transformers>=5.8.0",
    "ultralytics>=8.4.48",
]
